--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <h1>Ikat Kyataloda</h1>
+        <ul>
+            <li><a href="about.html">about</a></li>
+            <li><a href="favmusic.html">favmusic</a></li>
+            <li class="active"><a href="index.html">home</a></li>
+        </ul>
+        <h1>Vikhyat Konchada</h1>
         <p>Sigma extreme cool person</p>
         <p>awesome guy</p>
         <img
