Finished my website

--- a/about.html
+++ b/about.html
@@ -1,1 +1,52 @@
 <!doctype html>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+        <div id="nav">
+            <ul>
+                <li class="active"><a href="about.html">about</a></li>
+                <li><a href="favmusic.html">favmusic</a></li>
+            </ul>
+        </div>
+        <div class="aboutcard card glass3d" style="display: flex">
+            <div id="info">
+                <h1>Hi, I'm Vikhyat Konchada</h1>
+                <p>
+                    This is my personal website, where you can learn contact
+                    info and more about me.
+                </p>
+            </div>
+        </div>
+        <div class="text">
+            <h1>Interests</h1>
+        </div>
+        <div class="cards">
+            <div class="hobbycard card glass3d" style="display: flex">
+                <div class="musicontainer">
+                    <h1><b>Music</b></h1>
+                    <p>
+                        One of my main interests is music, mainly of the western
+                        classical genre. I am also part of my school symphonic
+                        band program, and play the bass clarinet. I was also
+                        part of the 2024-2025 GMEA All-State band as an
+                        alternate. Some of my favorite pieces include Crusell's
+                        second clarinet concerto, and I also like Mendelssohn's
+                        violin concerto in E minor.
+                    </p>
+                </div>
+            </div>
+            <div class="hobbycard card glass3d" style="display: flex">
+                <div class="musicontainer">
+                    <h1><b>Cubing</b></h1>
+                    <p>
+                        I enjoy cubing as a passtime, and can solve most
+                        main-stream cube puzzles. My fastest time on a 3x3 cube
+                        is 12.80 seconds, and 1.68 for a 2x2 cube. I use a MoYu
+                        RS3 M 2020 as my 3x3.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
