--- a/favmusic.html
+++ b/favmusic.html
@@ -8,8 +8,207 @@
             <ul>
                 <li><a href="about.html">about</a></li>
                 <li class="active"><a href="favmusic.html">favmusic</a></li>
-                <li><a href="index.html">home</a></li>
             </ul>
+        </div>
+        <div class="text">
+            <h1>Liked Composers</h1>
+        </div>
+        <div class="cards">
+            <div class="card glass3d" style="display: flex">
+                <img
+                    src="https://imgs.search.brave.com/zmsc150MzkWWmSm8tzuyVKVTmqM97UrYcxF0c_fBZGo/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9tZWRp/YS5nZXR0eWltYWdl/cy5jb20vaWQvNDgx/NjEyMDc5L3Bob3Rv/L3B5b3RyLWlseWlj/aC10Y2hhaWtvdnNr/eS1ydXNzaWFuLWNv/bXBvc2VyLXdob3Nl/LXdvcmtzLWluY2x1/ZGVkLXN5bXBob25p/ZXMtY29uY2VydG9z/LW9wZXJhcy5qcGc_/cz02MTJ4NjEyJnc9/MCZrPTIwJmM9UzJx/bVJkdlE3NUdCeHpa/X3VRbEpCMk96M21O/VF83MGFhUlJJZmR1/OXlHaz0"
+                    alt="image"
+                    style="min-width: 50%"
+                />
+                <div class="musicontainer">
+                    <h4><b>Pyotr Illyich Tchaikovsky</b></h4>
+                    <p>
+                        "Pyotr Ilyich Tchaikovsky (7 May 1840 – 6 November 1893)
+                        was a Russian composer during the Romantic period. He
+                        was the first Russian composer whose music made a
+                        lasting impression internationally. Tchaikovsky wrote
+                        some of the most popular concert and theatrical music in
+                        the classical repertoire, including the ballets Swan
+                        Lake and The Nutcracker, the 1812 Overture, his First
+                        Piano Concerto, Violin Concerto, the Romeo and Juliet
+                        Overture-Fantasy, several symphonies, and the opera
+                        Eugene Onegin." - Wikipedia
+                    </p>
+                    <a
+                        href="https://open.spotify.com/artist/3MKCzCnpzw3TjUYs2v7vDA"
+                    >
+                        <svg
+                            width="40px"
+                            role="img"
+                            viewBox="0 0 25 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <title>Spotify</title>
+                            <path
+                                d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.419 1.56-.299.421-1.02.599-1.559.3z"
+                            />
+                        </svg>
+                    </a>
+                    <a
+                        href="https://en.wikipedia.org/wiki/Pyotr_Ilyich_Tchaikovsky"
+                        ><svg
+                            width="40px"
+                            role="img"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <title>Wikipedia</title>
+                            <path
+                                d="M12.09 13.119c-.936 1.932-2.217 4.548-2.853 5.728-.616 1.074-1.127.931-1.532.029-1.406-3.321-4.293-9.144-5.651-12.409-.251-.601-.441-.987-.619-1.139-.181-.15-.554-.24-1.122-.271C.103 5.033 0 4.982 0 4.898v-.455l.052-.045c.924-.005 5.401 0 5.401 0l.051.045v.434c0 .119-.075.176-.225.176l-.564.031c-.485.029-.727.164-.727.436 0 .135.053.33.166.601 1.082 2.646 4.818 10.521 4.818 10.521l.136.046 2.411-4.81-.482-1.067-1.658-3.264s-.318-.654-.428-.872c-.728-1.443-.712-1.518-1.447-1.617-.207-.023-.313-.05-.313-.149v-.468l.06-.045h4.292l.113.037v.451c0 .105-.076.15-.227.15l-.308.047c-.792.061-.661.381-.136 1.422l1.582 3.252 1.758-3.504c.293-.64.233-.801.111-.947-.07-.084-.305-.22-.812-.24l-.201-.021c-.052 0-.098-.015-.145-.051-.045-.031-.067-.076-.067-.129v-.427l.061-.045c1.247-.008 4.043 0 4.043 0l.059.045v.436c0 .121-.059.178-.193.178-.646.03-.782.095-1.023.439-.12.186-.375.589-.646 1.039l-2.301 4.273-.065.135 2.792 5.712.17.048 4.396-10.438c.154-.422.129-.722-.064-.895-.197-.172-.346-.273-.857-.295l-.42-.016c-.061 0-.105-.014-.152-.045-.043-.029-.072-.075-.072-.119v-.436l.059-.045h4.961l.041.045v.437c0 .119-.074.18-.209.18-.648.03-1.127.18-1.443.421-.314.255-.557.616-.736 1.067 0 0-4.043 9.258-5.426 12.339-.525 1.007-1.053.917-1.503-.031-.571-1.171-1.773-3.786-2.646-5.71l.053-.036z"
+                            /></svg
+                    ></a>
+                </div>
+            </div>
+            <div class="card glass3d" style="display: flex">
+                <img
+                    src="Felix_Mendelssohn_Bartholdy.jpg"
+                    alt="image"
+                    style="min-width: 50%"
+                />
+                <div class="musicontainer">
+                    <h4><b>Felix Mendelssohn</b></h4>
+                    <p>
+                        "Jakob Ludwig Felix Mendelssohn Bartholdy(3 February
+                        1809 – 4 November 1847), widely known as Felix
+                        Mendelssohn, was a German composer, pianist, organist
+                        and conductor of the early Romantic period.
+                        Mendelssohn's compositions include symphonies,
+                        concertos, piano music, organ music and chamber music.
+                        His best-known works include the overture and incidental
+                        music for A Midsummer Night's Dream (which includes his
+                        "Wedding March"), the Italian and Scottish Symphonies,
+                        the oratorios St. Paul and Elijah, the Hebrides
+                        Overture, the mature Violin Concerto, the String Octet,
+                        and the melody used in the Christmas carol 'Hark! The
+                        Herald Angels Sing'" - Wikipedia
+                    </p>
+                    <a
+                        href="https://open.spotify.com/artist/6MF58APd3YV72Ln2eVg710"
+                    >
+                        <svg
+                            width="40px"
+                            role="img"
+                            viewBox="0 0 25 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <title>Spotify</title>
+                            <path
+                                d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.419 1.56-.299.421-1.02.599-1.559.3z"
+                            />
+                        </svg>
+                    </a>
+                    <a href="https://en.wikipedia.org/wiki/Felix_Mendelssohn"
+                        ><svg
+                            width="40px"
+                            role="img"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <title>Wikipedia</title>
+                            <path
+                                d="M12.09 13.119c-.936 1.932-2.217 4.548-2.853 5.728-.616 1.074-1.127.931-1.532.029-1.406-3.321-4.293-9.144-5.651-12.409-.251-.601-.441-.987-.619-1.139-.181-.15-.554-.24-1.122-.271C.103 5.033 0 4.982 0 4.898v-.455l.052-.045c.924-.005 5.401 0 5.401 0l.051.045v.434c0 .119-.075.176-.225.176l-.564.031c-.485.029-.727.164-.727.436 0 .135.053.33.166.601 1.082 2.646 4.818 10.521 4.818 10.521l.136.046 2.411-4.81-.482-1.067-1.658-3.264s-.318-.654-.428-.872c-.728-1.443-.712-1.518-1.447-1.617-.207-.023-.313-.05-.313-.149v-.468l.06-.045h4.292l.113.037v.451c0 .105-.076.15-.227.15l-.308.047c-.792.061-.661.381-.136 1.422l1.582 3.252 1.758-3.504c.293-.64.233-.801.111-.947-.07-.084-.305-.22-.812-.24l-.201-.021c-.052 0-.098-.015-.145-.051-.045-.031-.067-.076-.067-.129v-.427l.061-.045c1.247-.008 4.043 0 4.043 0l.059.045v.436c0 .121-.059.178-.193.178-.646.03-.782.095-1.023.439-.12.186-.375.589-.646 1.039l-2.301 4.273-.065.135 2.792 5.712.17.048 4.396-10.438c.154-.422.129-.722-.064-.895-.197-.172-.346-.273-.857-.295l-.42-.016c-.061 0-.105-.014-.152-.045-.043-.029-.072-.075-.072-.119v-.436l.059-.045h4.961l.041.045v.437c0 .119-.074.18-.209.18-.648.03-1.127.18-1.443.421-.314.255-.557.616-.736 1.067 0 0-4.043 9.258-5.426 12.339-.525 1.007-1.053.917-1.503-.031-.571-1.171-1.773-3.786-2.646-5.71l.053-.036z"
+                            /></svg
+                    ></a>
+                </div>
+            </div>
+            <div class="card glass3d" style="display: flex">
+                <img
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Bernhard_Henrik_Crusell.jpg/250px-Bernhard_Henrik_Crusell.jpg"
+                    alt="image"
+                    style="min-width: 50%"
+                />
+                <div class="musicontainer">
+                    <h4><b>Bernhard Henrik Crusell</b></h4>
+                    <p>
+                        "Bernhard Henrik Crusell (15 October 1775 – 28 July
+                        1838) was a Swedish-Finnish clarinetist, composer and
+                        translator, 'the most significant and internationally
+                        best-known Finnish-born classical composer and indeed, –
+                        the outstanding Finnish composer before Sibelius'." -
+                        Wikipedia
+                    </p>
+                    <a
+                        href="https://open.spotify.com/artist/6RZnn5duxDdSsDoaoRaibD"
+                    >
+                        <svg
+                            width="40px"
+                            role="img"
+                            viewBox="0 0 25 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <title>Spotify</title>
+                            <path
+                                d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.419 1.56-.299.421-1.02.599-1.559.3z"
+                            />
+                        </svg>
+                    </a>
+                    <a href="https://en.wikipedia.org/wiki/Bernhard_Crusell"
+                        ><svg
+                            width="40px"
+                            role="img"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <title>Wikipedia</title>
+                            <path
+                                d="M12.09 13.119c-.936 1.932-2.217 4.548-2.853 5.728-.616 1.074-1.127.931-1.532.029-1.406-3.321-4.293-9.144-5.651-12.409-.251-.601-.441-.987-.619-1.139-.181-.15-.554-.24-1.122-.271C.103 5.033 0 4.982 0 4.898v-.455l.052-.045c.924-.005 5.401 0 5.401 0l.051.045v.434c0 .119-.075.176-.225.176l-.564.031c-.485.029-.727.164-.727.436 0 .135.053.33.166.601 1.082 2.646 4.818 10.521 4.818 10.521l.136.046 2.411-4.81-.482-1.067-1.658-3.264s-.318-.654-.428-.872c-.728-1.443-.712-1.518-1.447-1.617-.207-.023-.313-.05-.313-.149v-.468l.06-.045h4.292l.113.037v.451c0 .105-.076.15-.227.15l-.308.047c-.792.061-.661.381-.136 1.422l1.582 3.252 1.758-3.504c.293-.64.233-.801.111-.947-.07-.084-.305-.22-.812-.24l-.201-.021c-.052 0-.098-.015-.145-.051-.045-.031-.067-.076-.067-.129v-.427l.061-.045c1.247-.008 4.043 0 4.043 0l.059.045v.436c0 .121-.059.178-.193.178-.646.03-.782.095-1.023.439-.12.186-.375.589-.646 1.039l-2.301 4.273-.065.135 2.792 5.712.17.048 4.396-10.438c.154-.422.129-.722-.064-.895-.197-.172-.346-.273-.857-.295l-.42-.016c-.061 0-.105-.014-.152-.045-.043-.029-.072-.075-.072-.119v-.436l.059-.045h4.961l.041.045v.437c0 .119-.074.18-.209.18-.648.03-1.127.18-1.443.421-.314.255-.557.616-.736 1.067 0 0-4.043 9.258-5.426 12.339-.525 1.007-1.053.917-1.503-.031-.571-1.171-1.773-3.786-2.646-5.71l.053-.036z"
+                            /></svg
+                    ></a>
+                </div>
+            </div>
+            <div class="card glass3d" style="display: flex">
+                <img
+                    src="Niccolo_Paganini.jpg"
+                    alt="image"
+                    style="min-width: 50%"
+                />
+                <div class="musicontainer">
+                    <h4><b>Niccolò Paganini</b></h4>
+                    <p>
+                        "Niccolò (or Nicolò) Paganini(27 October 1782 – 27 May
+                        1840) was an Italian violinist and composer. He was the
+                        most celebrated violin virtuoso of his time, and left
+                        his mark as one of the pillars of modern violin
+                        technique. His 24 Caprices for Solo Violin Op. 1 are
+                        among the best known of his compositions and have served
+                        as an inspiration for many prominent composers." -
+                        Wikipedia
+                    </p>
+                    <a
+                        href="https://open.spotify.com/artist/39FC9x5PaTNYHp5hwlaY4q"
+                    >
+                        <svg
+                            width="40px"
+                            role="img"
+                            viewBox="0 0 25 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <title>Spotify</title>
+                            <path
+                                d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.419 1.56-.299.421-1.02.599-1.559.3z"
+                            />
+                        </svg>
+                    </a>
+                    <a
+                        href="https://en.wikipedia.org/wiki/Niccol%C3%B2_Paganini"
+                        ><svg
+                            width="40px"
+                            role="img"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <title>Wikipedia</title>
+                            <path
+                                d="M12.09 13.119c-.936 1.932-2.217 4.548-2.853 5.728-.616 1.074-1.127.931-1.532.029-1.406-3.321-4.293-9.144-5.651-12.409-.251-.601-.441-.987-.619-1.139-.181-.15-.554-.24-1.122-.271C.103 5.033 0 4.982 0 4.898v-.455l.052-.045c.924-.005 5.401 0 5.401 0l.051.045v.434c0 .119-.075.176-.225.176l-.564.031c-.485.029-.727.164-.727.436 0 .135.053.33.166.601 1.082 2.646 4.818 10.521 4.818 10.521l.136.046 2.411-4.81-.482-1.067-1.658-3.264s-.318-.654-.428-.872c-.728-1.443-.712-1.518-1.447-1.617-.207-.023-.313-.05-.313-.149v-.468l.06-.045h4.292l.113.037v.451c0 .105-.076.15-.227.15l-.308.047c-.792.061-.661.381-.136 1.422l1.582 3.252 1.758-3.504c.293-.64.233-.801.111-.947-.07-.084-.305-.22-.812-.24l-.201-.021c-.052 0-.098-.015-.145-.051-.045-.031-.067-.076-.067-.129v-.427l.061-.045c1.247-.008 4.043 0 4.043 0l.059.045v.436c0 .121-.059.178-.193.178-.646.03-.782.095-1.023.439-.12.186-.375.589-.646 1.039l-2.301 4.273-.065.135 2.792 5.712.17.048 4.396-10.438c.154-.422.129-.722-.064-.895-.197-.172-.346-.273-.857-.295l-.42-.016c-.061 0-.105-.014-.152-.045-.043-.029-.072-.075-.072-.119v-.436l.059-.045h4.961l.041.045v.437c0 .119-.074.18-.209.18-.648.03-1.127.18-1.443.421-.314.255-.557.616-.736 1.067 0 0-4.043 9.258-5.426 12.339-.525 1.007-1.053.917-1.503-.031-.571-1.171-1.773-3.786-2.646-5.71l.053-.036z"
+                            /></svg
+                    ></a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
